# SearchRight_Technical_Assignment

./: .gitignore  README.md  docker-compose.yaml  example_cache_batch.py  profiling_node.py.lprof  pyproject.toml  test_embedding.py
DAO/: comapnyDAO.py
VO/: companynews.py
example_datas/: company_ex1_비바리퍼블리카.json  company_ex2_네이버.json  company_ex3_리디.json  company_ex4_엘박스.json  company_ex5_카사코리아.json  company_ex6_야놀자.json  company_news.csv  company_news_with_content.csv  company_news_with_content_v1.csv  compnay_ex7_시어스랩.json  setup_company_data.py  setup_company_news_data.py  talent_ex1.json  talent_ex2.json  talent_ex3.json  talent_ex4.json
nginx/conf/: nginx.conf
nginx/conf.d/: searchright.conf
searchright_technical_assignment/: main.py
searchright_technical_assignment/DAO/: companynewsDAO.py  conn.py
searchright_technical_assignment/VO/: company.py
searchright_technical_assignment/crud/: companyDAO.py  company_dao.py  companynewsDAO.py  companynews_dao.py
searchright_technical_assignment/db/: conn.py  create_and_insert_tables.py  drop_tables.py  insert_company_data.py  insert_company_news_data.py  insert_company_news_embeddings.py  insert_company_news_new.py  insert_company_news_vector.py  setup_tables.py
searchright_technical_assignment/model/: company.py  companynews.py
searchright_technical_assignment/models/: company.py  companynews.py
searchright_technical_assignment/node/: profiling_node.py
searchright_technical_assignment/prompt/: college.py  profiling_prompt.py
searchright_technical_assignment/util/: graph.py  (+10 more)
tests/: simple_db_test.py  simple_server_test.py  test_line_profile.py  test_profiling_api_speed.py  test_profiling_node.py
(+19 files in other folders)
