[tool.poetry]
name = "searchright-technical-assignment"
version = "0.1.0"
description = ""
authors = ["Nuung <qlgks1@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
psycopg2-binary = "^2.9.10"
openai = "^1.75.0"
sqlalchemy = "^2.0.41"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
dotenv = "^0.9.9"
gunicorn = "^22.0.0"
pgvector = "^0.4.1"
numpy = "^2.3.1"
pandas = "^2.3.1"
aiohttp = "^3.12.14"
chardet = "^5.2.0"
trafilatura = "^1.9.9" # trafilatura 라이브러리 추가
selenium = "^4.34.2"
bs4 = "^0.0.2"
langchain = "^0.3.26"
langchain-openai = "^0.3.28"
langgraph = "^0.5.4"
langchain-community = "^0.3.27"
zstandard = "^0.23.0"
pillow = "^11.3.0"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
